--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Invitaci車n Ariel & Gisela</title>
+    <title>Invitaci&oacute;n Ariel & Gisela</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root { --dorado: #b8926a; --texto: #5a5a5a; --fondo-gris: #f8f8f8; --verde-exito: #76a071; --rojo-error: #c06c6c; }
@@ -13,7 +13,6 @@
         .hero-image {
             width: 100%;
             aspect-ratio: 3 / 4; 
-            /* RUTA RELATIVA PARA GITHUB */
             background-image: url('foto-casamiento3.jpg'); 
             background-size: contain; 
             background-position: center top;
@@ -78,7 +77,7 @@
     <div class="contador-container">
         <div class="contador-titulo">Faltan</div>
         <div class="timer">
-            <div class="time-box"><span id="days">0</span><label>D赤as</label></div>
+            <div class="time-box"><span id="days">0</span><label>D&iacute;as</label></div>
             <div class="time-box"><span id="hours">0</span><label>Horas</label></div>
             <div class="time-box"><span id="minutes">0</span><label>Minutos</label></div>
             <div class="time-box"><span id="seconds">0</span><label>Segundos</label></div>
@@ -87,22 +86,22 @@
 
     <div class="seccion-texto">
         <p>Tenemos el gusto de compartir con ustedes este momento tan importante para nuestras vidas.</p>
-        <div class="historia">"Nuestra historia comenz車 hace 6 a?os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
-        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>?Nos casamos!</strong></p>
+        <div class="historia">&quot;Nuestra historia comenz&oacute; hace 6 a&ntilde;os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos.&quot;</div>
+        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>&iexcl;Nos casamos!</strong></p>
     </div>
 
     <div class="info-boda">
         <div class="info-item">
             <span class="info-label">Ceremonia</span>
             <span class="info-value">El Rosedal</span>
-            <span class="info-sub">Horario: 12:00 | Direcci車n: Isabel Infanta Av. 555</span>
-            <a href="https://maps.google.com" target="_blank" class="map-link">?? Ver mapa</a>
+            <span class="info-sub">Horario: 12:00 | Direcci&oacute;n: Isabel Infanta Av. 555</span>
+            <a href="https://maps.google.com/?q=El+Rosedal+Palermo" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
-            <span class="info-label">Celebraci車n - Almuerzo</span>
+            <span class="info-label">Celebraci&oacute;n - Almuerzo</span>
             <span class="info-value">Selquet</span>
-            <span class="info-sub">Horario: 13:00 | Direcci車n: Figueroa Alcorta 6402</span>
-            <a href="https://maps.google.com" target="_blank" class="map-link">?? Ver mapa</a>
+            <span class="info-sub">Horario: 13:00 | Direcci&oacute;n: Figueroa Alcorta 6402</span>
+            <a href="https://maps.google.com/?q=Selquet+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
             <span class="info-label">Dress Code</span>
@@ -112,17 +111,17 @@
     </div>
 
     <div class="confirmacion">
-        <p><strong>Busc芍 tu nombre y confirm芍:</strong></p>
+        <p><strong>Busc&aacute; tu nombre y confirm&aacute;:</strong></p>
         <div id="searchSection">
-            <input type="text" id="guestSearch" placeholder="Escrib赤 tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
+            <input type="text" id="guestSearch" placeholder="Escrib&iacute; tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
             <button class="btn-buscar" onclick="buscar()">Buscar</button>
         </div>
         <div id="resultsArea" class="hidden"><div id="listContainer"></div></div>
         <div id="confirmacionArea" class="hidden">
-            <p>Hola <strong><span id="selectedName"></span></strong>,<br>?c車mo nos acompa?ar芍s?</p>
-            <button class="btn-verde" onclick="enviarRespuesta('civil')">S車lo al Civil</button>
+            <p>Hola <strong><span id="selectedName"></span></strong>,<br>&iquest;c&oacute;mo nos acompa&ntilde;ar&aacute;s?</p>
+            <button class="btn-verde" onclick="enviarRespuesta('civil')">S&oacute;lo al Civil</button>
             <button class="btn-verde" onclick="enviarRespuesta('almuerzo')">Civil y Almuerzo</button>
-            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistir谷</button>
+            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistir&eacute;</button>
         </div>
         <p id="msg" style="font-weight: bold; color: var(--dorado);"></p>
     </div>
@@ -131,7 +130,7 @@
         <p><strong>Si desean hacernos un regalo:</strong></p>
         <div class="cbu-box">Santander Rio | CBU: 0720762688000001354490<br>Alias: <strong>ESPADA.PALETA.LASTRE</strong></div>
     </div>
-    <div class="pie">Para esta ocasi車n tan especial, hemos decidido celebrar en un ambiente s車lo para adultos. Gracias por acompa?arnos.</div>
+    <div class="pie">Para esta ocasi&oacute;n tan especial, hemos decidido celebrar en un ambiente s&oacute;lo para adultos. Gracias por acompa&ntilde;arnos.</div>
 </div>
 
 <script>
@@ -142,7 +141,6 @@
     const musicBtn = document.getElementById("musicBtn");
     const musicIcon = document.getElementById("musicIcon");
 
-    // --- L車GICA REFORZADA PARA ANDROID ---
     const iniciarMusica = () => {
         if (audio.paused) {
             if (audio.currentTime === 0) {
@@ -217,7 +215,7 @@
         try {
             await fetch(`${WEB_APP_URL}?action=confirmar&nombre=${encodeURIComponent(nombreSeleccionado)}&opcion=${opcion}`);
             document.getElementById('confirmacionArea').classList.add('hidden');
-            document.getElementById('msg').innerText = "?Confirmado!";
+            document.getElementById('msg').innerText = "&iexcl;Confirmado!";
         } catch(e) { document.getElementById('msg').innerText = "Error."; }
     }
 </script>
